--- a/JDBC_1105.md
+++ b/JDBC_1105.md
@@ -358,9 +358,12 @@ mysql> SELECT ename FROM emp WHERE ename LIKE '%R%';
 
 DML + WEB
 
-![jdbc03_flow](md-images/jdbc03_flow.png)
 
-![1105_1](md-images/1105_1.png)
+![jdbc03_flow](https://user-images.githubusercontent.com/83646543/140839753-7a47cd43-b3a7-4b28-9d42-78175a3e9e45.png)
+
+
+![1105_1](https://user-images.githubusercontent.com/83646543/140839732-46152fa4-964a-462d-9a70-a7958470f748.png)
+
 
 #### CustomerDAOImpl
 
@@ -644,7 +647,8 @@ Client사용자가 사용할 기능을 도출 : useCase Diagram
 
 ​	Extend 기능 
 
-![Broker.ucd](md-images/Broker.ucd-16360897326281.jpg)
+![Broker ucd-16360897326281](https://user-images.githubusercontent.com/83646543/140839787-5e0a7f4d-e449-45aa-85e2-4dc06bff892f.jpg)
+
 
 **Use Case Diagram** :: 
 
